--- a/estilos/style.css
+++ b/estilos/style.css
@@ -53,3 +53,88 @@ main{
     display: block;
     padding: 10px;
 }
+
+#formulario h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#formulario p{
+    font-size: 0.8em;
+}
+
+form > .campo{
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    border-radius: 8px;
+    margin: 
+    5px 0px;
+    height: 40px;
+}
+
+.campo span{
+    color: white;
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+.campo input{
+    font-size: 1em;
+    background-color: #6eccc9;
+    height: 100%;
+    width: calc(100% - 44.5px);
+    transform: translateY(-12px);
+    padding: 4px;
+    border-radius: 8px;
+    border: none;
+}
+
+input:focus-within{
+    background-color: white;
+    border: none;
+}
+
+form label{
+    display: none;
+}
+
+form > input[type=submit]{
+    font-size: 1em;
+    display: block;  
+    height: 40px;
+    width: 100%;
+    background-color: #43928f;
+    border-radius: 8px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    margin: 5px 0px;
+}
+
+form > input[type=submit]:hover{
+    background-color: #2f6866;
+}
+
+form > .botao{
+    display: block;
+    font-size: 1em;
+    text-decoration: none;
+    border: 2px solid #56bbb8;
+    height: 40px;
+    width: 100%;
+    border-radius: 8px;
+    color: #275857;
+    text-align: center;
+    padding-top: 6px;
+    cursor: pointer;
+}
+
+form > .botao:hover{
+    background: #56bbb8;
+}
+
+form > .botao > span{
+    font-size: 0.8em;
+}
